--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,18 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 clap = { version = "4.4.18", features = ["derive"] }
+prost = "0.12.3"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 tempfile = "3.9.0"
 tokio = { version = "1.35.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+
+[[bin]]
+name = "client"
+path = "src/client.rs"
+
+[build-dependencies]
+prost-build = "0.12.3"
+
