--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 clap = { version = "4.4.18", features = ["derive"] }
+futures = "0.3.30"
 prost = "0.12.3"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
