--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.79"
 clap = { version = "4.4.18", features = ["derive"] }
 futures = "0.3.30"
+itertools = "0.12.1"
 prost = "0.12.3"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
@@ -16,10 +17,6 @@ tempfile = "3.9.0"
 tokio = { version = "1.35.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-
-[[bin]]
-name = "client"
-path = "src/client.rs"
 
 [build-dependencies]
 prost-build = "0.12.3"
