--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+axum = "0.7.4"
+axum-macros = "0.4.1"
 clap = { version = "4.4.18", features = ["derive"] }
 futures = "0.3.30"
 itertools = "0.12.1"
 prost = "0.12.3"
+rayon = "1.8.1"
+ring = "0.17.7"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 tempfile = "3.9.0"
