--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
-axum = "0.7.4"
+axum = { version = "0.7.4", features = ["multipart", "macros"] }
 axum-macros = "0.4.1"
 clap = { version = "4.4.18", features = ["derive"] }
 futures = "0.3.30"
