--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ axum-macros = "0.4.1"
 clap = { version = "4.4.18", features = ["derive"] }
 futures = "0.3.30"
 itertools = "0.12.1"
+pin-project = "1.1.4"
 prost = "0.12.3"
 rayon = "1.8.1"
 ring = "0.17.7"
@@ -21,6 +22,7 @@ tempfile = "3.9.0"
 tokio = { version = "1.35.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+trait-variant = "0.1.1"
 
 [build-dependencies]
 prost-build = "0.12.3"
